# small-binary-experiments

./: Cargo.toml  README.md  update.sh
rust-minimal/: Cargo.toml
sixtyfps-hello-world/: Cargo.toml  build.rs  main.rs  ui.60
sixtyfps-hello-world/src/: main.rs
