cargo-features = ["strip"]

[workspace]
members = [
    'rust-minimal',
    'sixtyfps-hello-world',
]

default-members = [
    'rust-minimal',
    'sixtyfps-hello-world',
]

resolver = "2"

[profile.release]
lto = true
panic = "abort"
opt-level = "s"
strip = true
codegen-units = 1

[profile.dev]
panic = "abort"
