[package]
name = "sixtyfps-hello-world"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sixtyfps = { git = "https://github.com/sixtyfpsui/sixtyfps", branch = "master", default-features = false }
sixtyfps-rendering-backend-mcu = { git = "https://github.com/sixtyfpsui/sixtyfps", branch = "master" }

[build-dependencies]
sixtyfps-build = { git = "https://github.com/sixtyfpsui/sixtyfps", branch = "master" }
